mdapi/Custom/objects/Property_Issues__c.object
<CustomObject>
    <fields>
        <fullName>Utilities_On__c</fullName>
        <description>Are utilities on? (Please mark those that are on)</description>
        <inlineHelpText>Are utilities on? (Please mark those that are on)</inlineHelpText>
        <label>Utilities On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Power</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Gas (if applicable)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_Region_does_issue_Impact__c</fullName>
        <label>What Region does issue Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Not Region Related</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yardi_Property_Code__c</fullName>
        <formula>Portfolio__r.Yardi_Property_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardi Property Code</label>
        <type>Text</type>
    </fields>
    <label>Property Issue</label>
    <listViews>
        <fullName>All_CLOSED_Call_Center_Issues_Today1</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Date_Time_Notified__c</columns>
        <columns>Assigned_Date__c</columns>
        <columns>NAME</columns>
        <columns>Date_Time_Rcv_d__c</columns>
        <columns>What_Region_does_issue_Impact__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Submitter_Type__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Assigned__c</columns>
        <columns>Status__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed,Closed (Never Connected),Closed (Resolved),Closed (Cancelled)</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Call_Center_Issue</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <label>ATL** CLOSED Call Center Issues Today</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Call_Center_Issues</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Submitter_Type__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>What_Region_does_issue_Impact__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Property_Address__c</columns>
        <columns>Assigned__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed (Resolved),Closed (Cancelled)</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Call_Center_Issue</value>
        </filters>
        <label>All Closed Call Center Issues</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Consumer_Reported_Issues</fullName>
        <columns>NAME</columns>
        <columns>What_Region_does_issue_Impact__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned__c</columns>
        <columns>Portfolio__c</columns>
        <columns>State_Web_Submission__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Current_Resident__c</columns>
        <columns>Issue_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed (Resolved),Closed (Cancelled)</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Resident_or_Prospect_Issue</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Closed Consumer Reported Issues</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Internal_Property_Issues</fullName>
        <columns>NAME</columns>
        <columns>Closed_Date__c</columns>
        <columns>Date_Time_Notified__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Property_Address__c</columns>
        <columns>Property_City__c</columns>
        <columns>Property_State__c</columns>
        <columns>Property_Zip__c</columns>
        <columns>Closed_Reason_Notes__c</columns>
        <columns>DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closed_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Internal_Property_Issue</value>
        </filters>
        <label>All Closed Internal Property Issues</label>
    </listViews>
    <listViews>
        <fullName>All_Escalated_Resident_Issues_Closed</fullName>
        <booleanFilter>1 AND (2 OR 3 )</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>What_Region_does_issue_Impact__c</columns>
        <columns>Date_Time_Rcv_d__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Nature_of_Issue__c</columns>
        <columns>Issue_Origination__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Assigned__c</columns>
        <columns>Division_President__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Escalated_Resident_Issue_BX_IH</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed (Resolved),Closed (Cancelled),Closed (Never Connected)</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed,Closed (Not Identifiable)</value>
        </filters>
        <label>All Escalated Resident Issues - Closed</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Escalated_Resident_Issues_Open</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>What_Region_does_issue_Impact__c</columns>
        <columns>Date_Time_Rcv_d__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Nature_of_Issue__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Assigned__c</columns>
        <columns>Division_President__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Escalated_Resident_Issue_BX_IH</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed (Resolved),Closed (Cancelled),Closed (Never Connected)</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed (Not Identifiable)</value>
        </filters>
        <label>All Escalated Resident Issues - Open</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_GPCA_Issues</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Submitter_Type__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>What_Region_does_issue_Impact__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Property_Address__c</columns>
        <columns>Assigned__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.GPCA_Issue</value>
        </filters>
        <label>All GPCA Issues</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Call_Center_Issues</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Date_Time_Rcv_d__c</columns>
        <columns>What_Region_does_issue_Impact__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Submitter_Type__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Assigned__c</columns>
        <columns>Status__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed (Never Connected),Closed (Resolved),Closed (Cancelled)</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Call_Center_Issue</value>
        </filters>
        <label>All Open Call Center Issues</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Consumer_Reported_Issues</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned__c</columns>
        <columns>State_Web_Submission__c</columns>
        <columns>Status__c</columns>
        <columns>Issue_Origination__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Current_Resident__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>What_Region_does_issue_Impact__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed (Never Connected),Closed (Resolved),Closed (Cancelled)</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Resident_or_Prospect_Issue</value>
        </filters>
        <label>All Open Consumer Reported Issues</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Internal_Property_Issues</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Property_Address__c</columns>
        <columns>Property_City__c</columns>
        <columns>Assigned_Date__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Closed_Reason_Notes__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned__c</columns>
        <columns>Date_Time_Notified__c</columns>
        <columns>Property_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed (Resolved),Closed (Cancelled)</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Internal_Property_Issue</value>
        </filters>
        <label>All Open Internal Property Issues</label>
    </listViews>
    <listViews>
        <fullName>Consumer_Reported_Issues_Today</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned__c</columns>
        <columns>State_Web_Submission__c</columns>
        <columns>Status__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Current_Resident__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>What_Region_does_issue_Impact__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Resident_or_Prospect_Issue</value>
        </filters>
        <label>Consumer Reported Issues - Today</label>
    </listViews>
    <listViews>
        <fullName>Escalated_Issue_Chicago_Minneapo_Open</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Date_Time_Rcv_d__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Nature_of_Issue__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Assigned__c</columns>
        <columns>Division_President__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Escalated_Resident_Issue_BX_IH</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed (Never Connected),Closed (Resolved),Closed (Cancelled)</value>
        </filters>
        <filters>
            <field>What_Region_does_issue_Impact__c</field>
            <operation>equals</operation>
            <value>Chicago,Minneapolis</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed (Not Identifiable)</value>
        </filters>
        <label>Escalated Issue Chicago/Minneapo. - Open</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Escalated_Issue_Jacks_Orlando_Open</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Date_Time_Rcv_d__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Nature_of_Issue__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Assigned__c</columns>
        <columns>Division_President__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Escalated_Resident_Issue_BX_IH</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed (Never Connected),Closed (Resolved),Closed (Cancelled)</value>
        </filters>
        <filters>
            <field>What_Region_does_issue_Impact__c</field>
            <operation>equals</operation>
            <value>Jacksonville,Orlando</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed (Not Identifiable)</value>
        </filters>
        <label>Escalated Issue Jacks/Orlando - Open</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Escalated_Issue_Jacksonville_Open</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Date_Time_Rcv_d__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Nature_of_Issue__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Assigned__c</columns>
        <columns>Division_President__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Escalated_Resident_Issue_BX_IH</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed (Never Connected),Closed (Resolved),Closed (Cancelled)</value>
        </filters>
        <filters>
            <field>What_Region_does_issue_Impact__c</field>
            <operation>equals</operation>
            <value>Jacksonville</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed (Not Identifiable)</value>
        </filters>
        <label>Escalated Issue Jacksonville - Open</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Escalated_Issue_Las_Vegas_Sac_Open</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Date_Time_Rcv_d__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Nature_of_Issue__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Assigned__c</columns>
        <columns>Division_President__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Issues__c.Escalated_Resident_Issue_BX_IH</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed (Never Connected),Closed (Resolved),Closed (Cancelled)</value>
        </filters>
        <filters>
            <field>What_Region_does_issue_Impact__c</field>
            <operation>equals</operation>
            <value>Las Vegas,Sacramento</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed (Not Identifiable)</value>
        </filters>
        <label>Escalated Issue Las Vegas/Sac. - Open</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Issue-{0000}</displayFormat>
        <label>Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Issues</pluralLabel>
    <recordTypes>
        <fullName>Call_Center_Issue</fullName>
        <active>true</active>
        <description>Used from Yardi Call Center - New Message emails sent to regional leasing inboxes</description>
        <label>Call Center Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Catastrophic</fullName>
        <active>true</active>
        <description>Property Assessment for the impact of Hurricane Irma</description>
        <label>Catastrophic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escalated_Resident_Issue_BX_IH</fullName>
        <active>true</active>
        <description>For resident related issues that are escalated to Blackstone or IH Corporate or Social Media</description>
        <label>Escalated Resident Issue (BX/IH)</label>
    </recordTypes>
    <recordTypes>
        <fullName>GPCA_Issue</fullName>
        <active>true</active>
        <label>GPCA Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Property_Issue</fullName>
        <active>true</active>
        <description>Used for Internal related issues (when we have identified something that needs to be addressed)</description>
        <label>Internal Property Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTM_Issue</fullName>
        <active>true</active>
        <label>RTM Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resident_or_Prospect_Issue</fullName>
        <active>true</active>
        <description>Used from web submission (Formstack) or incoming phone calls from residents or prospects</description>
        <label>Consumer Reported Issue</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Closed_Dates_Require_Closed_Status</fullName>
        <active>true</active>
        <description>If a Closed Date is entered, the Status must be a &quot;Closed&quot; value.</description>
        <errorConditionFormula>$Profile.Name != &apos;System Administrator&apos;
&amp;&amp;
NOT(ISBLANK( Closed_Date__c )) 
 &amp;&amp; 
 NOT(
	OR(
		ISPICKVAL( Status__c , &apos;Closed (Never Connected)&apos;),
		ISPICKVAL(Status__c , &apos;Closed (Resolved)&apos;),
		ISPICKVAL(Status__c , &apos;Closed (Cancelled)&apos;),
                ISPICKVAL( Status__c , &apos;Closed&apos;) 
	)
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>If a Closed Date is entered, the Status must be a &quot;Closed&quot; value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Status_Requires_Closed_Date</fullName>
        <active>true</active>
        <description>Closed issues require a closed date.</description>
        <errorConditionFormula>$Profile.Name != &apos;System Administrator&apos;
&amp;&amp;
OR(
	ISPICKVAL( Status__c , &apos;Closed (Never Connected)&apos;) ,
	ISPICKVAL( Status__c , &apos;Closed (Resolved)&apos;),
	ISPICKVAL( Status__c , &apos;Closed (Cancelled)&apos;),
        ISPICKVAL( Status__c , &apos;Closed&apos;)
) 
&amp;&amp; 
ISBLANK( Closed_Date__c )</errorConditionFormula>
        <errorDisplayField>Closed_Date__c</errorDisplayField>
        <errorMessage>Closed issues require a closed date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Current_Resident_Issue_Require_Portfolio</fullName>
        <active>true</active>
        <description>Current resident issues require a Portfolio.</description>
        <errorConditionFormula>ISPICKVAL(Current_Resident__c, &apos;Yes&apos;) &amp;&amp;
ISBLANK(Portfolio__c)&amp;&amp; 
$Profile.Name != &apos;System Administrator&apos; &amp;&amp;
$Profile.Name != &apos;API User&apos;</errorConditionFormula>
        <errorDisplayField>Portfolio__c</errorDisplayField>
        <errorMessage>Current resident issues require a Portfolio.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resolution_Note_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c, &apos;Closed (Resolved)&apos;) &amp;&amp; ISBLANK( Closed_Reason_Notes__c )</errorConditionFormula>
        <errorMessage>Resolution Notes is required when Property Issue Status is &apos;Closed (Resolved)&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tampa_Users_cannot_Close_Property_Issue</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
OR(
$User.Username == &apos;john.uiterwyk@invitationhomes.com&apos;,
$User.Username == &apos;dbeisner@invitationhomes.com&apos;,
$User.Username == &apos;james.staples@invitationhomes.com&apos;,
$User.Username == &apos;melinda.letempt-soto@invitationhomes.com&apos;
), 
OR(
ISPICKVAL(Status__c, &apos;Closed&apos;),
ISPICKVAL(Status__c, &apos;Closed (Never Connected)&apos;),
ISPICKVAL(Status__c, &apos;Closed (Resolved)&apos;),
ISPICKVAL(Status__c, &apos;Closed (Cancelled)&apos;),
ISPICKVAL(Status__c, &apos;Closed (Not Identifiable)&apos;)
) 
)</errorConditionFormula>
        <errorMessage>You do not have permission to Close the Property Issue.</errorMessage>
    </validationRules>
</CustomObject>